<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/L1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whatsapp_image_2021_12_28_at_4_37_18_pm"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="127dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/img1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/whatsapp_image_2021_12_28_at_3_24_32_pm__2_" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="161dp"
        android:layout_height="127dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/img2"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/whatsapp_image_2021_12_28_at_3_24_32_pm__1_" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="161dp"
        android:layout_height="127dp"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/string_img3"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/whatsapp_image_2021_12_28_at_3_24_32_pm" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="24dp"
        android:background="@color/black"
        android:text="@string/movies"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="24dp"
        android:background="@color/black"
        android:text="@string/music"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        android:text="@string/books"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/convergence"
        android:text="@string/like"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="122dp"
        android:layout_height="53dp"
        android:layout_marginEnd="104dp"
        android:fontFamily="@font/convergence"
        android:text="@string/wise"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
